2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_dump): If a variable is undefined, say
	it.
	(&check_ambiguous_conditional): Give finer error messages.
	(&macro_define): Check that a `+=' variable is not set with `='.
	Check for ambiguous definitions each time you _set_ (even with `+=')
	a variable.
	(&read_main_am_file): Perform a deep copy of %conditional.

	
2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_defined): Some callers, e.g.,
	&am_primary_prefixes, really want to know if the variable is
	defined for any condition, not `TRUE' by default.
	(&am_primary_prefixes): Give a more precise error message.

2001-04-09  Akim Demaille  <akim@epita.fr>

	(&variable_conditions): Don't include `FALSE' in the result.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions_reduce): FALSE is absorbent.
	(&variable_conditions): Don't include `FALSE' in the result.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* tests/defs, tests/depend3.test: Remove useless code.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform):  Use
	&variable_conditions, don't read $conditional{$var}.
	(&variable_conditions_sub): When the call is the top level call,
	generate all the permutations of the conditions.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* depend2.am (@AMDEP@%FPFX%DEPMODE): Define it when GENERIC so
	that it does not get noticed twice by automake, which now
	complains for multiple definitions.
	* tests/vartar.test: s/INSTALL/install/g, automake now complains
	because we defined INSTALL.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&generate_makefile) Use macro_define to define
	SOURCES and OBJECTS.
	(&variable_defined): Don't check for $conditional{VAR}{COND} as
	this would make perl create $condition{VAR}, which we don't want.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_defined, &define_pretty_variable):