@@ -1,5 +1,12 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&handle_source_transform): Better locality of the
+	variables.
+	Use `next' to skip nonexistent variables.
+
+	
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&variable_dump): If a variable is undefined, say
 	it.
 	(&check_ambiguous_conditional): Give finer error messages.
